# nopeekOS

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MICROKERNEL_REFACTOR.md  NPKFS_V2.md  PHASE10_WIDGETS.md  PHASE12_MICROVM.md  README.md  WIDGET_VOCAB.md  build.sh  next_fbl.txt  x86_64-nopeekos.json
.cargo/: config.toml
kernel/: Cargo.toml  linker.ld
kernel/src/: acpi.rs  audit.rs  blkdev.rs  boot.s  capability.rs  config.rs  crypto.rs  csprng.rs  fat32.rs  framebuffer.rs  gpt.rs  heap.rs  input.rs  install.rs  intel_nic.rs  intent.rs  interrupts.rs  keyboard.rs  layers.rs  main.rs  memory.rs  netdev.rs  nvme.rs  paging.rs  pci.rs  process.rs  rtc.rs  serial.rs  setup.rs  shell.rs  store.rs  theme.rs  tss.rs  vga.rs  virtio_blk.rs  virtio_net.rs  wasm.rs  wasm_meta.rs  xhci.rs
kernel/src/crypto/: aead.rs  aead_hw.rs  aead_hw_ghash.rs  mod.rs  update_key.rs
kernel/src/crypto/tls/: certstore.rs  mod.rs  rsa.rs  x509.rs
kernel/src/drivers/: blkdev.rs  framebuffer.rs  keyboard.rs  mod.rs  netdev.rs  nvme.rs  pci.rs  serial.rs  virtio_blk.rs  virtio_net.rs  xhci.rs
kernel/src/gpu/: ggtt_layout.rs  ggtt_slab.rs  gop.rs  intel_xe.rs  mod.rs
kernel/src/gui/: background.rs  color.rs  font.rs  icons.rs  login.rs  mod.rs  render.rs  text.rs
kernel/src/gui/fonts/: mod.rs  spleen_16x32.rs  spleen_32x64.rs  spleen_8x16.rs
kernel/src/install_data/: grub.cfg
kernel/src/install_data/assets/: mod.rs
kernel/src/intent/: auth.rs  fs.rs  http.rs  install.rs  mod.rs  net.rs  power.rs  system.rs  update.rs  wallpaper.rs  wasm.rs
kernel/src/microvm/: mod.rs
kernel/src/microvm/cpu/: mod.rs
kernel/src/microvm/cpu/svm/: enable.rs  mod.rs  npt.rs  probe.rs  vmcb.rs
kernel/src/microvm/cpu/vmx/: enable.rs  ept.rs  mod.rs  probe.rs  vmcs.rs
kernel/src/microvm/devices/: guest_fetch.rs  guest_mem.rs  insn_decoder.rs  mod.rs  pci_bus.rs  pic8259.rs  virtio_blk_pci.rs  virtio_net_pci.rs  virtqueue.rs
kernel/src/microvm/linux/: bzimage.rs  mod.rs
kernel/src/mm/: heap.rs  memory.rs  mod.rs  paging.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  eth.rs  icmp.rs  ipv4.rs  mod.rs  ntp.rs  tcp.rs  udp.rs
kernel/src/npkfs/: bitmap.rs  btree.rs  cache.rs  journal.rs  mod.rs  superblock.rs  types.rs
kernel/src/security/: capability.rs  csprng.rs  mod.rs
kernel/src/shade/: bar.rs  compositor.rs  cursor.rs  input.rs  mod.rs  terminal.rs  window.rs
kernel/src/shade/widgets/: abi.rs  animation.rs  check_abi.rs  debug.rs  layout.rs  mod.rs  palette.rs  render.rs  tile.rs
kernel/src/shade/widgets/raster/: cpu.rs  mod.rs
kernel/src/smp/: mod.rs  per_core.rs  scheduler.rs  trampoline.s
kernel/src/storage/: fat32.rs  gpt.rs  mod.rs
kernel/src/storage/npkfs/: bitmap.rs  btree.rs  cache.rs  format.rs  fs.rs  journal.rs  mod.rs  object.rs  paths.rs  sb_io.rs  storage.rs  superblock.rs  types.rs
kernel/src/storage/npkfs/v2/: btree.rs  format.rs  fs.rs  mod.rs  object.rs  paths.rs  sb_io.rs  storage.rs
kernel/src/tls/: asn1.rs  certstore.rs  hmac.rs  mod.rs  rsa.rs  sha256.rs  x25519.rs  x509.rs
kernel/src/vmx/: bzimage.rs  enable.rs  ept.rs  mod.rs  probe.rs  vmcs.rs
microvm-linux/: build.sh  nopeek-virt.config
microvm/linux/: nopeek-tiny.config
microvm/linux/init/: Cargo.toml
microvm/linux/init/.cargo/: config.toml
microvm/linux/init/src/: main.rs
release/: kernel.sig  manifest
release/assets/: inter-variable.ttf.sig  linux-virt.bzImage.sig  manifest  microvm-initramfs.cpio.gz.sig  phosphor.atlas  phosphor.atlas.sig
release/modules/: debug.sig  debug.wasm  drun.sig  drun.wasm  files-stub.sig  files-stub.wasm  loft.sig  loft.wasm  manifest  testdisk.sig  testdisk.wasm  top.sig  top.wasm  wallpaper.sig  wallpaper.wasm  wifi.sig  wifi.wasm
tools/: install.sh  npk-connect.py
tools/regen-icons/: Cargo.toml
tools/regen-icons/src/: main.rs
tools/wasm/debug/: Cargo.toml  build.rs
tools/wasm/debug/src/: host.rs  lib.rs
tools/wasm/drun/: Cargo.toml  build.rs
tools/wasm/drun/src/: lib.rs
tools/wasm/files-stub/: Cargo.toml  build.rs
tools/wasm/files-stub/src/: lib.rs
tools/wasm/loft/: Cargo.toml  build.rs
tools/wasm/loft/src/: lib.rs
tools/wasm/sdk/widgets/: Cargo.toml
tools/wasm/sdk/widgets/src/: abi.rs  app_meta.rs  check_abi.rs  lib.rs  prefab.rs  style.rs  wire.rs
tools/wasm/sdk/widgets/tests/: roundtrip.rs
tools/wasm/testdisk/: Cargo.toml  build.rs
tools/wasm/testdisk/src/: host.rs  lib.rs
tools/wasm/top/: Cargo.toml  build.rs
tools/wasm/top/src/: lib.rs
tools/wasm/wallpaper/: Cargo.toml  build.rs
tools/wasm/wallpaper/src/: lib.rs
tools/wasm/wifi/: Cargo.toml  LINUX_GAPS.md  TX_AUDIT.md  TX_TASKS.md  build.rs  gen_iqk.py  gen_pmac.py  gen_rfk.py  gen_tables.py  gen_tssi.py
tools/wasm/wifi/src/: bb.rs  bb_tables.rs  btc.rs  chan.rs  dpk.rs  dpk_tables.rs  efuse.rs  fw.rs  host.rs  imr.rs  iqk.rs  iqk_tables.rs  lib.rs  mac.rs  phy.rs  pwr_trim.rs  regs.rs  rfk.rs  rfk_tables.rs  tssi.rs  tssi_tables.rs  tx.rs  vif.rs
