[workspace]
members = ["kernel"]
exclude = [
    "tools/wasm/wallpaper",
    "tools/wasm/top",
    "tools/wasm/wifi",
    "tools/wasm/debug",
    "tools/wasm/sdk/widgets",
    "tools/wasm/files-stub",
    "tools/wasm/drun",
    "tools/regen-icons",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
