[package]
name = "nopeekos-kernel"
version = "0.37.2"
edition = "2024"
authors = ["nopeek"]
description = "nopeekOS – AI-native Operating System Kernel"

[features]
installer = []

[dependencies]
spin = "0.10"         # Spinlock (no_std mutex)
bitflags = "2.11"     # Flag-basierte Enums

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[dependencies.wasmi]
version = "1.0"
default-features = false
features = ["prefer-btree-collections"]

[dependencies.blake3]
version = "1.8"
default-features = false

# RustCrypto: battle-tested crypto primitives (no_std, software-only)
# Note: chacha20poly1305 and x25519-dalek use SIMD intrinsics that crash
# on x86_64-unknown-none (bare metal). We keep our own implementations for those.
[dependencies.sha2]
version = "0.10"
default-features = false
features = ["force-soft"]

[dependencies.hmac]
version = "0.12"
default-features = false

[dependencies.hkdf]
version = "0.12"
default-features = false

# ECDSA signature verification (for TLS certificate chain validation)
[dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa"]

[dependencies.p384]
version = "0.13"
default-features = false
features = ["ecdsa", "ecdh"]

[dependencies.ecdsa]
version = "0.16"
default-features = false
features = ["verifying"]

# AES-GCM for TLS 1.3 (TLS_AES_128_GCM_SHA256 + TLS_AES_256_GCM_SHA384)
# Uses cpufeatures for AES-NI runtime detection (N100 has AES-NI)
[dependencies.aes-gcm]
version = "0.10"
default-features = false
features = ["aes", "alloc"]
