[package]
name = "nopeekos-kernel"
version = "0.86.5"
edition = "2024"
authors = ["nopeek"]
description = "nopeekOS – AI-native Operating System Kernel"

[features]
installer = []

[dependencies]
spin = "0.10"         # Spinlock (no_std mutex)
bitflags = "2.11"     # Flag-basierte Enums

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[dependencies.wasmi]
version = "1.0"
default-features = false
features = ["prefer-btree-collections"]

[dependencies.blake3]
version = "1.8"
default-features = false

# RustCrypto: battle-tested crypto primitives (no_std).
# As of v0.85.x SSE/AVX2 are enabled in target-feature, so any RustCrypto
# crate's SIMD backend is fair game now. ChaCha20-Poly1305 + X25519 are
# still hand-rolled in this kernel (csprng.rs / aead.rs / tls/x25519.rs)
# from the days when SIMD intrinsics #UD'd here — could swap for the
# crates if we ever want to delete those modules.
[dependencies.sha2]
version = "0.10"
default-features = false

[dependencies.hmac]
version = "0.12"
default-features = false

[dependencies.hkdf]
version = "0.12"
default-features = false

# ECDSA signature verification (for TLS certificate chain validation)
[dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa"]

[dependencies.p384]
version = "0.13"
default-features = false
features = ["ecdsa", "ecdh"]

[dependencies.ecdsa]
version = "0.16"
default-features = false
features = ["verifying"]

# AES-256-GCM — primary symmetric cipher.
# Storage: at-rest encryption of every npkFS blob (HW AES-NI + PCLMULQDQ
# enabled in target-feature, runtime cpufeatures dispatch).
# TLS 1.3: TLS_AES_128_GCM_SHA256 + TLS_AES_256_GCM_SHA384 cipher suites.
[dependencies.aes-gcm]
version = "0.10"
default-features = false
features = ["aes", "alloc"]

# cpufeatures — runtime CPU feature detection (cached after first
# call). aes-gcm + blake3 use this to dispatch to HW or soft path.
# We poll it directly from the `disk` intent to print which features
# the userland actually sees, so a HW-vs-detection mismatch is
# obvious in one glance.
[dependencies.cpufeatures]
version = "0.2"

# Widget pipeline (Phase 10) ───────────────────────────────────────────

# postcard: wire format for widget trees (WASM → kernel).
# Version-prefixed, variant-order-stable, no_std + alloc.
[dependencies.postcard]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

# fontdue: TTF glyph rasterizer for Inter Variable UI font.
# no_std compatible. Variable-axis via `OutlineBuilder` at metrics time.
[dependencies.fontdue]
version = "0.9"
default-features = false
features = ["hashbrown"]

[dependencies.hashbrown]
version = "0.14"
default-features = false
features = ["ahash"]
