[package]
name = "nopeekos-kernel"
version = "0.104.0"
edition = "2024"
authors = ["nopeek"]
description = "nopeekOS – AI-native Operating System Kernel"

[features]
installer = []

[dependencies]
spin = "0.10"         # Spinlock (no_std mutex)
bitflags = "2.11"     # Flag-basierte Enums

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[dependencies.wasmi]
version = "1.0"
default-features = false
features = ["prefer-btree-collections"]

[dependencies.blake3]
version = "1.8"
default-features = false

# RustCrypto: battle-tested crypto primitives (no_std).
# As of v0.85.x SSE/AVX2 are enabled in target-feature, so any RustCrypto
# crate's SIMD backend is fair game now. ChaCha20-Poly1305 + X25519 are
# still hand-rolled in this kernel (csprng.rs / aead.rs / tls/x25519.rs)
# from the days when SIMD intrinsics #UD'd here — could swap for the
# crates if we ever want to delete those modules.
[dependencies.sha2]
version = "0.10"
default-features = false
# `oid` feature exposes Sha256/Sha384 as `AssociatedOid`, required by
# `rsa::Pkcs1v15Sign::new::<D>()` to build the DigestInfo prefix.
features = ["oid"]

[dependencies.hmac]
version = "0.12"
default-features = false

[dependencies.hkdf]
version = "0.12"
default-features = false

# ECDSA signature verification (for TLS certificate chain validation)
[dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa"]

[dependencies.p384]
version = "0.13"
default-features = false
features = ["ecdsa", "ecdh"]

[dependencies.ecdsa]
version = "0.16"
default-features = false
features = ["verifying"]

# RSA PKCS#1 v1.5 signature verification for X.509 chains.
# Replaces the hand-rolled BigInt math we used to ship in
# `crypto/tls/rsa.rs`. Constant-time BigUint via `crypto-bigint`.
[dependencies.rsa]
version = "0.9"
default-features = false

# AES-256-GCM — primary symmetric cipher.
# Storage: at-rest encryption of every npkFS blob (HW AES-NI + PCLMULQDQ
# enabled in target-feature, runtime cpufeatures dispatch).
# TLS 1.3: TLS_AES_128_GCM_SHA256 + TLS_AES_256_GCM_SHA384 cipher suites.
[dependencies.aes-gcm]
# Locked at 0.10 because 0.11-rc/polyval 0.7 regress AES-GCM by 3× on
# N100 (Atom-class) — measured 718 → 243 MB/s dec. polyval 0.7 prefers
# AVX-512 paths, falls to soft on Atom. polyval 0.6 + ghash 0.5
# (transitively pulled by aes-gcm 0.10) still use legacy PCLMULQDQ
# single-block, which N100 actually accelerates.
version = "0.10"
default-features = false
features = ["aes", "alloc"]

# cpufeatures — runtime CPU feature detection (cached after first
# call). aes-gcm + blake3 use this to dispatch to HW or soft path.
# We poll it directly from the `disk` intent to print which features
# the userland actually sees, so a HW-vs-detection mismatch is
# obvious in one glance.
[dependencies.cpufeatures]
version = "0.2"

# `aes` + `ctr` + `ghash` direct deps for our custom AES-GCM
# implementation in `crypto::aead_hw`. aes-gcm 0.10's combined
# crate is mostly already optimal (AES-CTR via aes crate is ~1.5
# GB/s on N100), but its `ghash` backend is single-block PCLMULQDQ
# (~720 MB/s) which caps the whole AEAD. Step 1 (v0.88.0) builds
# our own AEAD glue around the same primitives to validate the
# framework. Step 2 swaps in a 4-way aggregated GHASH for the win.
[dependencies.aes]
version = "0.8"
default-features = false

[dependencies.ctr]
version = "0.9"
default-features = false

[dependencies.ghash]
version = "0.5"
default-features = false

# Widget pipeline (Phase 10) ───────────────────────────────────────────

# postcard: wire format for widget trees (WASM → kernel).
# Version-prefixed, variant-order-stable, no_std + alloc.
[dependencies.postcard]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

# fontdue: TTF glyph rasterizer for Inter Variable UI font.
# no_std compatible. Variable-axis via `OutlineBuilder` at metrics time.
[dependencies.fontdue]
version = "0.9"
default-features = false
features = ["hashbrown"]

[dependencies.hashbrown]
version = "0.14"
default-features = false
features = ["ahash"]
