[package]
name = "files-stub"
version = "0.2.1"
edition = "2024"
description = "P10.2 dummy widget app — commits one tree, exits."

[lib]
crate-type = ["cdylib"]

[dependencies]
nopeek_widgets = { path = "../sdk/widgets" }

[build-dependencies]
nopeek_widgets = { path = "../sdk/widgets" }

[profile.release]
opt-level = "s"
lto = true
strip = true
