[package]
name = "loft"
version = "0.1.11"
edition = "2024"
description = "File browser — Thunar-clone for nopeekOS."

[lib]
crate-type = ["cdylib"]

[dependencies]
nopeek_widgets = { path = "../sdk/widgets" }

[dependencies.postcard]
version = "1.0"
default-features = false
features = ["alloc"]

[build-dependencies]
nopeek_widgets = { path = "../sdk/widgets" }

[profile.release]
opt-level = "s"
lto = true
strip = true
