[package]
name = "wallpaper"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }

[build-dependencies]
nopeek_widgets = { path = "../sdk/widgets" }

[profile.release]
opt-level = "s"
lto = true
strip = true
